[FEATURE] Share Button in Viewer

--- a/src/image-viewer.scss
+++ b/src/image-viewer.scss
@@ -58,4 +58,8 @@ image-viewer.ion-page {
         max-height: 100vh;
         margin: 0 auto;
     }
+
+    ion-footer{
+        bottom: 20px;
+    }
 }
